scalr-ctl Changelog
===============

Version 1.0.28
-----------

New feature

    [ST-117] - Added support for /teams/ and /acl-roles/
    [ST-117] - Action renamed: scalr-ctl team create => scalr-ctl team add-to-environment
    [ST-117] - Action renamed: scalr-ctl team delete => scalr-ctl team delete-from-environment
    [ST-120] - Added support for server endpoints

Fixed

    [ST-123] - DELETE-methods return empty response


Version 1.0.27
-----------

Bug

    [ST-127] - Handling deprecated routes


Version 1.0.24
-----------

Bug

    [ST-121] - Autocomplete for options

New Feature

    [ST-88] - Import/Export Scalr Objects
    Examples:
    scalr-ctl export [tab][tab]
    scalr-ctl export script --scriptId 4686 > script.yml
    cat ~/Downloads/script.yml | scalr-ctl import --envId 5345
    cat ~/Downloads/script.yml | scalr-ctl import --update


Improvement

    [ST-105] - Bad experience with create operation
    [ST-116] - Speed improvements
    [ST-118] - Code refactoring


Version 1.0.16
-----------

Bug

    [ST-98] - APIv2 > server-import support
    [ST-100] - Exception on OSX
    [ST-109] - throw correct error when server returns corrupt JSON response
    [ST-112] - Bash error on login after installing scalr-ctl

New Feature

    [ST-70] - Implement Launch/Terminate farm methods for scalr-ctl
    [ST-87] - APIv2 > Implement Farms clone action

Improvement

    [ST-91] - image status delete renamed to pending_delete
    [ST-106] - Autocomplete tab-tab doesn't work on OSX
    [ST-114] - APIv2 > Global Variables in Farm scope


Version 1.0.15
-----------
Added experimental import/export feature.